# parsly

./: .gitignore  CMakeLists.txt  README.md  engine.cpp  engine.h  example_proto.json  net_stack.cpp  net_stack.h  packet.h  parse_engine.pro  parse_engine_decode_pp.cpp  parse_engine_encode_pp.cpp  pop.py  pre_processor.py
examples/common/: my_net_stack.cpp  my_net_stack.h
examples/tcp_client/: main.cpp  my_net_stack.cpp  my_net_stack.h  parsly_client.pro
examples/tcp_server/: main.cpp  parsly_server.pro
include/: engine.h  engine.h.autosave  net_stack.h  packet.h  parse_engine.h  proto_compiler.h  sized_mask.h
paper/: README.md  main.tex  structure.tex
src/: main.cpp  net_stack.cpp  parse_engine.cpp  parse_engine_decode_pop.cpp  parse_engine_encode_pop.cpp  proto_compiler.cpp
test/: CMakeLists.txt  common.h  main.cpp  test_parse_engine.h  test_proto_compiler.h
